--- a/mysite_nginx.conf
+++ b/mysite_nginx.conf
@@ -1,17 +1,17 @@
 # mysite_nginx.conf
 
 # the upstream component nginx needs to connect to
-upstream django {  
+upstream django {
     # server unix:///path/to/your/mysite/mysite.sock; # for a file socket
     server unix:///usr/local/project/mysite/mysite.sock; # for a web port socket (we'll use this first)
 }
 
 # configuration of the server
-server {  
+server {
     # the port your site will be served on
     listen      80;
     # the domain name it will serve for
-    server_name 116.85.38.82; # substitute your machine's IP address or FQDN
+    server_name imthunder.xin; # substitute your machine's IP address or FQDN
     charset     utf-8;
 
     # max upload size
